kubernetes/base/security/kyverno/kyverno-disallow-privilege-escalation.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privilege-escalation
  labels:
    app.kubernetes.io/name: disallow-privilege-escalation
    app.kubernetes.io/component: security
    app.kubernetes.io/part-of: oneinchmarket
    app.kubernetes.io/managed-by: kustomize
  annotations:
    policies.kyverno.io/title: Disallow Privilege Escalation
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: high
    policies.kyverno.io/description: >-
      Privilege escalation, such as via set-user-ID or set-group-ID file mode,
      should not be allowed. This policy ensures that all containers set
      allowPrivilegeEscalation to false.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: validate-privilege-escalation
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Containers must set securityContext.allowPrivilegeEscalation to false."
        pattern:
          spec:
            containers:
              - securityContext:
                  allowPrivilegeEscalation: false
